doctorapp/force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Method used.</description>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>CreditCard</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>DebitCard</fullName>
                <label>Debit Card</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>StoreCredit</fullName>
                <label>Store Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>