doctorapp/force-app/main/default/objects/Payment__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Processing timestamp.</description>
    <label>Processed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>