doctorapp/force-app/main/default/objects/Payment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Transaction ID, card last 4 digits, etc.</description>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>