doctorapp/force-app/main/default/objects/Payment__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>References Sale.</description>
    <label>Sale</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>