doctorapp/force-app/main/default/objects/Payment__c/validationRules/Non_Negative_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Amount</fullName>
    <active>true</active>
    <description>Payment amount cannot be negative.</description>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount cannot be negative.</errorMessage>
    <errorDisplayField>Amount__c</errorDisplayField>
</ValidationRule>